--- a/movie-project.css
+++ b/movie-project.css
@@ -1,6 +1,26 @@
+body {
+ color: #ffffff;
+}
+
 .card {
 display: flex;
  flex-direction: column;
  margin: 0 auto;
  justify-content: center;
+}
+
+.star-background {
+ height: 100vh;
+ position: fixed;
+ top: 0;
+ left: 0;
+ right: 0;
+ bottom: 0;
+ width: 100vw;
+ object-fit: cover;
+ z-index: -1;
+}
+
+.img-wrapper {
+ opacity: 100%;
 }
