--- a/movie-project.css
+++ b/movie-project.css
@@ -1,17 +1,22 @@
 body {
  color: #ffffff;
 }
-
+#outputForMovies {
+ flex-wrap: wrap;
+}
 .navbar {
  display: flex;
  justify-content: center;
 }
 
 .card {
-display: flex;
+ position: relative;
+ display: flex;
  flex-direction: column;
  margin: 0 auto;
  justify-content: center;
+ width:100%;
+ max-width: 250px;
 }
 
 .star-background {
@@ -30,32 +35,28 @@ display: flex;
  opacity: 100%;
 }
 
-.poster {
- width: 100%;
- height: 100%;
- /*width: 286px;*/
- /*height: 450px;*/
- object-fit: cover;
-}
-
-
-                         /* This makes the card display */
-.card-img-top:hover {
- opacity: 1;
-}
+/* This makes the card display */
 
 .banner-content{
+ display:flex;
+ flex-direction:column;
  position:absolute;
  top:0;
  left:0;
- display:none;
-
+ opacity:0;
+ transition: all ease .3s;
+ background-color:rgb(0 0 0 / 47%);
+ right:0;
+ bottom:0;
+ justify-content:center;
+ align-items:center;
+}
+.banner-content:hover {
+ opacity:1;
 }
 
-.card-img-top:hover + .banner-content{display:block;}
 
-
-                         /*Side bar */
+/*Side bar */
 /* The sidebar menu */
 .sidebar {
  height: 100%; /* 100% Full-height */
@@ -119,4 +120,3 @@ display: flex;
  .sidebar {padding-top: 15px;}
  .sidebar a {font-size: 18px;}
 }
-
