--- a/movie-project.css
+++ b/movie-project.css
@@ -3,6 +3,7 @@ body {
 }
 #outputForMovies {
  flex-wrap: wrap;
+ align-items: start;
 }
 .navbar {
  display: flex;
@@ -45,7 +46,7 @@ body {
  left:0;
  opacity:0;
  transition: all ease .3s;
- background-color:rgb(0 0 0 / 47%);
+ background-color:rgb(0 0 0 / 55%);
  right:0;
  bottom:0;
  justify-content:center;
@@ -53,6 +54,8 @@ body {
 }
 .banner-content:hover {
  opacity:1;
+ height: 500px;
+
 }
 
 
@@ -119,4 +122,10 @@ body {
 @media screen and (max-height: 450px) {
  .sidebar {padding-top: 15px;}
  .sidebar a {font-size: 18px;}
+}
+
+
+/* edit button*/
+.hidden-form {
+ display: none;
 }
