--- a/movie-project.css
+++ b/movie-project.css
@@ -48,13 +48,13 @@ body {
  transition: all ease .3s;
  background-color:rgb(0 0 0 / 55%);
  right:0;
- bottom:0;
  justify-content:center;
  align-items:center;
+ height: 500px;
 }
 .banner-content:hover {
  opacity:1;
- height: 500px;
+ /*height: 500px;*/
 
 }
 
@@ -129,3 +129,4 @@ body {
 .hidden-form {
  display: none;
 }
+
